# stac-insitu

./: .gitignore  .pre-commit-config.yaml  ingest.py  pyproject.toml  search-catalog.ipynb
recipes/: by_category.py
stac_insitu/: filter.py  io.py  visualization.py
